Add animation to blog-list page

--- a/blog-list.html
+++ b/blog-list.html
@@ -386,8 +386,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end Hero section -->
 
@@ -406,6 +409,7 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- container end -->
                 </div>
                 <!-- end page-menu section -->
 
@@ -414,7 +418,7 @@
                         <div class="row">
                             <div class="col-xl-8">
                                 <div class="blogs-wrapper">
-                                    <div class="blog-post-item blog-post-item--style-2">
+                                    <div class="blog-post-item blog-post-item--style-2 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
                                                 <img src="images/blog-post/blog-post-img10.jpg" alt="">
@@ -451,7 +455,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <div class="blog-post-item blog-post-item--style-2">
+                                    <div class="blog-post-item blog-post-item--style-2 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
                                                 <img src="images/blog-post/blog-post-img11.jpg" alt="">
@@ -488,7 +492,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <div class="blog-post-item blog-post-item--style-2">
+                                    <div class="blog-post-item blog-post-item--style-2 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
                                                 <img src="images/blog-post/blog-post-img12.jpg" alt="">
@@ -525,7 +529,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <div class="blog-post-item blog-post-item--style-2">
+                                    <div class="blog-post-item blog-post-item--style-2 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="700ms">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
                                                 <img src="images/blog-post/blog-post-img13.jpg" alt="">
@@ -564,7 +568,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="see-more-btn-area text-center">
+                                <div class="see-more-btn-area text-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="800ms">
                                     <a href="" class="see-more-btn">
                                         See More
                                         <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -574,6 +578,7 @@
                                     </a>
                                 </div>
                             </div>
+                            <!-- col end -->
                             <div class="col-xl-4">
                                 <div class="sidebar-widget-wrapper">
                                     
@@ -729,8 +734,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
 
                 <!-- start call-to-action-section -->
@@ -746,7 +754,7 @@
                                             </h2>
                                         </div>
                                     </div>
-                                    <div class="col-xl-6">
+                                    <div class="col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="call-to-cation-form-wrapper d-flex">
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
@@ -756,8 +764,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end call-to-action-section -->
 
@@ -901,6 +912,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- container end -->
                 </footer>
                 <!-- end footer section -->
 
