Add animation to blog-grid page

--- a/blog-grid.html
+++ b/blog-grid.html
@@ -379,15 +379,18 @@
                                 <div class="rt-hero-section-content-wrapper">
                                     <div class="online-content-wrapper">
                                         <div class="section-text-content text-center">
-                                            <h2 class="section-heading wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                            <h2 class="section-heading  wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                                 Blog Grid Layout
                                             </h2>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end Hero section -->
 
@@ -406,6 +409,7 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- container end -->
                 </div>
                 <!-- end page-menu section -->
 
@@ -413,7 +417,7 @@
                     <div class="container">
                         <div class="blogs-wrapper">
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -446,7 +450,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
+                                <!-- col end -->
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -479,7 +484,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
+                                <!-- col end -->
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -512,7 +518,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
+                                <!-- col end -->
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="700ms">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -545,7 +552,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
+                                <!-- col end -->
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="800ms">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -578,7 +586,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
+                                <!-- col end -->
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="900ms">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -611,7 +620,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
+                                <!-- col end -->
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="1000ms">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -644,7 +654,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4">
+                                <!-- col end -->
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="1100ms">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -677,7 +688,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-4">
+                                <!-- col end -->
+                                <div class="col-lg-6 col-md-6 col-sm-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="1200ms">
                                     <div class="blog-post-item">
                                         <div class="blog-post-img">
                                             <div class="blog-post-img-link">
@@ -710,9 +722,11 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- col end -->
                             </div>
+                            <!-- row end -->
                         </div>
-                        <div class="see-more-btn-area text-center">
+                        <div class="see-more-btn-area text-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="1300ms">
                             <a href="" class="see-more-btn">
                                 See More
                                 <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -722,6 +736,7 @@
                             </a>
                         </div>
                     </div>
+                    <!-- container end -->
                 </section>
 
                 <!-- start call-to-action-section -->
@@ -737,7 +752,7 @@
                                             </h2>
                                         </div>
                                     </div>
-                                    <div class="col-xl-6">
+                                    <div class="col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                         <div class="call-to-cation-form-wrapper d-flex">
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
@@ -747,8 +762,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end call-to-action-section -->
 
@@ -892,6 +910,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- container end -->
                 </footer>
                 <!-- end footer section -->
 
