Add animation to contact page

--- a/contact.html
+++ b/contact.html
@@ -386,8 +386,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end Hero section -->
 
@@ -406,11 +409,12 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- container end -->
                 </div>
                 <!-- end page-menu section -->
 
                 <!-- start contact section -->
-                <section class="contact-section section-padding">
+                <section class="contact-section section-padding overflow-hidden">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12 col-lg-5 col-xl-5">
@@ -462,10 +466,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                             <div class="col-md-12 col-lg-7 col-xl-7">
                                 <div class="contact-form-area">
                                     <div class="section-text-content">
-                                        <div class="section-name">Contact Us</div>
+                                        <div class="section-name wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">Contact Us</div>
                                         <h1 class="section-heading section-heading--style-2 text-start wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                             Send A Message
                                         </h1>
@@ -491,13 +496,16 @@
                                                     <textarea name="" id="" rows="8" placeholder="Text here" class="rt-form-textarea"></textarea>
                                                 </div>
                                             </div>
-                                            <button class="contact-form-btn">Send Message</button>
+                                            <button class="contact-form-btn wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">Send Message</button>
                                         </form>
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end contact section -->
 
@@ -524,7 +532,8 @@
                                             </h2>
                                         </div>
                                     </div>
-                                    <div class="col-xl-6">
+                                    <!-- col end -->
+                                    <div class="col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="call-to-cation-form-wrapper d-flex">
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
@@ -532,10 +541,15 @@
                                             <button class="submit-btn submit-btn--style-1">Get Started</button>
                                         </div>
                                     </div>
+                                    <!-- col end -->
                                 </div>
+                                <!-- row end -->
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end call-to-action-section -->
 
