Add button animation to all page

--- a/contact.html
+++ b/contact.html
@@ -360,7 +360,7 @@
                                     <div class="navbar-action-area">
                                         <ul class="action-btn-list d-flex align-items-center">
                                             <li>
-                                                <a href="">Get docfi</a>
+                                                <a href="" class="coolBeans">Get docfi</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -538,7 +538,7 @@
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
                                             </form>
-                                            <button class="submit-btn submit-btn--style-1">Get Started</button>
+                                            <button class="coolBeans submit-btn submit-btn--style-1">Get Started</button>
                                         </div>
                                     </div>
                                     <!-- col end -->
