--- a/elements.html
+++ b/elements.html
@@ -360,7 +360,7 @@
                                     <div class="navbar-action-area">
                                         <ul class="action-btn-list d-flex align-items-center">
                                             <li>
-                                                <a href="">Get docfi</a>
+                                                <a href="" class="coolBeans">Get docfi</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -729,7 +729,7 @@
                                                 </div>
                                             </div>
                                             <div class="explore-btn wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
-                                                <a href="">Explore Topics</a>
+                                                <a href="" class="coolBeans">Explore Topics</a>
                                             </div>
                                         </div>
                                     </div>
@@ -762,7 +762,7 @@
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
                                             </form>
-                                            <button class="submit-btn submit-btn--style-1">Get Started</button>
+                                            <button class="coolBeans submit-btn submit-btn--style-1">Get Started</button>
                                         </div>
                                     </div>
                                 </div>
