--- a/index-3.html
+++ b/index-3.html
@@ -360,7 +360,7 @@
                                     <div class="navbar-action-area">
                                         <ul class="action-btn-list d-flex align-items-center">
                                             <li>
-                                                <a href="">Get docfi</a>
+                                                <a href="" class="coolBeans">Get docfi</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -410,7 +410,7 @@
                                         </div>
         
                                         <div class="searchbox-submit">
-                                            <button class="button button-primary rt-searchbox-btn d-flex align-items-center" type="submit">
+                                            <button class="coolBeans rt-searchbox-btn d-flex align-items-center" type="submit">
                                                 Search
                                             </button>
                                         </div>
@@ -445,7 +445,7 @@
                                     <p class="card-info circle-radius">
                                         Lorem ipsum dolor sit amet consectetur ready adipiscing elit. Mauris nullam the integer quam dolor nunc any more semper.
                                     </p>
-                                    <a href="" class="card-btn">
+                                    <a href="" class="coolBeans card-btn">
                                         Read More
                                     </a>
                                 </div>
@@ -462,7 +462,7 @@
                                     <p class="card-info circle-radius">
                                         Lorem ipsum dolor sit amet consectetur ready adipiscing elit. Mauris nullam the integer quam dolor nunc any more semper.
                                     </p>
-                                    <a href="" class="card-btn">
+                                    <a href="" class="coolBeans card-btn">
                                         Read More
                                     </a>
                                 </div>
@@ -479,7 +479,7 @@
                                     <p class="card-info circle-radius">
                                         Lorem ipsum dolor sit amet consectetur ready adipiscing elit. Mauris nullam the integer quam dolor nunc any more semper.
                                     </p>
-                                    <a href="" class="card-btn">
+                                    <a href="" class="coolBeans card-btn">
                                         Read More
                                     </a>
                                 </div>
@@ -602,7 +602,7 @@
                                                 </div>
 
                                             <div class="form-btn">
-                                                <a href="" class="rt-form-submit-btn">
+                                                <a href="" class="coolBeans rt-form-submit-btn">
                                                     Submit Here
                                                 </a>
                                             </div>
@@ -885,7 +885,7 @@
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
                                             </form>
-                                            <button class="submit-btn submit-btn--style-2">Get Started</button>
+                                            <button class="coolBeans submit-btn submit-btn--style-2">Get Started</button>
                                         </div>
                                     </div>
                                 </div>
