--- a/index.html
+++ b/index.html
@@ -360,7 +360,9 @@
                                     <div class="navbar-action-area">
                                         <ul class="action-btn-list d-flex align-items-center">
                                             <li>
-                                                <a href="">Get docfi</a>
+                                                <a href="" class="coolBeans">
+                                                    Get docfi
+                                                </a>
                                             </li>
                                         </ul>
                                     </div>
@@ -411,7 +413,7 @@
                                         </div>
         
                                         <div class="searchbox-submit">
-                                            <button class="button button-primary rt-searchbox-btn d-flex align-items-center" type="submit">
+                                            <button class="coolBeans rt-searchbox-btn d-flex align-items-center" type="submit">
                                                 Search
                                             </button>
                                         </div>
@@ -461,7 +463,7 @@
                                     <p class="card-info">
                                         psum is simply dummy text the pritypesetting industry Lorem Ipsum has been the industry’s standard many more.
                                     </p>
-                                    <a href="" class="card-btn">Explore Topics</a>
+                                    <a href="" class="coolBeans card-btn">Explore Topics</a>
                                 </div>
                             </div>
                             <!-- col end -->
@@ -483,7 +485,7 @@
                                     <p class="card-info">
                                         psum is simply dummy text the pritypesetting industry Lorem Ipsum has been the industry’s standard many more.
                                     </p>
-                                    <a href="" class="card-btn">Explore Topics</a>
+                                    <a href="" class="coolBeans card-btn">Explore Topics</a>
                                 </div>
                             </div>
                             <!-- col end -->
@@ -503,7 +505,7 @@
                                     <p class="card-info">
                                         psum is simply dummy text the pritypesetting industry Lorem Ipsum has been the industry’s standard many more.
                                     </p>
-                                    <a href="" class="card-btn">Explore Topics</a>
+                                    <a href="" class="coolBeans card-btn">Explore Topics</a>
                                 </div>
                             </div>
                             <!-- col end -->
@@ -840,7 +842,7 @@
                             </div>
                             <!-- col end -->
                             <div class="support-btn wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="800ms">
-                                <a href="" class="visit-support-page-btn">Visit Support Page
+                                <a href="" class=" visit-support-page-btn">Visit Support Page
                                     <svg width="16" height="11" viewBox="0 0 16 11" fill="white" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M14.707 6.04883L10.957 9.79883C10.6055 10.1797 9.99023 10.1797 9.63867 9.79883C9.25781 9.44727 9.25781 8.83203 9.63867 8.48047L11.7773 6.3125H0.9375C0.410156 6.3125 0 5.90234 0 5.375C0 4.81836 0.410156 4.4375 0.9375 4.4375H11.7773L9.63867 2.29883C9.25781 1.94727 9.25781 1.33203 9.63867 0.980469C9.99023 0.599609 10.6055 0.599609 10.957 0.980469L14.707 4.73047C15.0879 5.08203 15.0879 5.69727 14.707 6.04883Z" fill=""/>
                                     </svg>
@@ -1525,13 +1527,13 @@
                             <img src="images/faq/tree-tob.png" alt="">
                             <ul>
                                 <li>
-                                    <img src="images/faq/leaf-2.png" alt="">
+                                    <img src="images/faq/leaf-2.png" alt="" class="wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                 </li>
                                 <li>
-                                    <img src="images/faq/leaf-1.png" alt="">
+                                    <img src="images/faq/leaf-1.png" alt="" class="wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                 </li>
                                 <li>
-                                    <img src="images/faq/leaf-3.png" alt="">
+                                    <img src="images/faq/leaf-3.png" alt="" class="wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                 </li>
                             </ul>
                         </div>
@@ -1559,7 +1561,7 @@
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
                                             </form>
-                                            <button class="submit-btn submit-btn--style-1">Get Started</button>
+                                            <button class="coolBeans submit-btn submit-btn--style-1">Get Started</button>
                                         </div>
                                     </div>
                                     <!-- col end -->
