--- a/two-columns.html
+++ b/two-columns.html
@@ -360,7 +360,7 @@
                                     <div class="navbar-action-area">
                                         <ul class="action-btn-list d-flex align-items-center">
                                             <li>
-                                                <a href="">Get docfi</a>
+                                                <a href="" class="coolBeans" >Get docfi</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -393,7 +393,7 @@
                                         </div>
         
                                         <div class="searchbox-submit">
-                                            <button class="button button-primary rt-searchbox-btn d-flex align-items-center" type="submit">
+                                            <button class="coolBeans rt-searchbox-btn d-flex align-items-center" type="submit">
                                                 Search
                                             </button>
                                         </div>
@@ -655,7 +655,7 @@
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
                                             </form>
-                                            <button class="submit-btn submit-btn--style-1">Get Started</button>
+                                            <button class="coolBeans submit-btn submit-btn--style-1">Get Started</button>
                                         </div>
                                     </div>
                                     <!-- col end -->
