--- a/404.html
+++ b/404.html
@@ -360,7 +360,7 @@
                                     <div class="navbar-action-area">
                                         <ul class="action-btn-list d-flex align-items-center">
                                             <li>
-                                                <a href="">Get docfi</a>
+                                                <a href="" class="coolBeans">Get docfi</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -439,7 +439,7 @@
                                         <form action="">
                                             <input type="text" placeholder="Search">
                                         </form>
-                                        <a href="" class="home-back-btn">Back to Home Page</a>
+                                        <a href="" class="coolBeans home-back-btn">Back to Home Page</a>
                                     </div>
                                 </div>
                                 <!-- col end -->
@@ -470,7 +470,7 @@
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
                                             </form>
-                                            <button class="submit-btn submit-btn--style-1">Get Started</button>
+                                            <button class="coolBeans submit-btn submit-btn--style-1">Get Started</button>
                                         </div>
                                     </div>
                                     <!-- col end -->
