--- a/index-2.html
+++ b/index-2.html
@@ -360,7 +360,7 @@
                                     <div class="navbar-action-area">
                                         <ul class="action-btn-list d-flex align-items-center">
                                             <li>
-                                                <a href="">Get docfi</a>
+                                                <a href="" class="coolBeans">Get docfi</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -412,7 +412,7 @@
                                         </div>
         
                                         <div class="searchbox-submit">
-                                            <button class="button button-primary rt-searchbox-btn d-flex align-items-center" type="submit">
+                                            <button class="coolBeans rt-searchbox-btn d-flex align-items-center" type="submit">
                                                 Search
                                             </button>
                                         </div>
@@ -1456,7 +1456,7 @@
                                 </div>
                                 <!-- col end -->
                                 <div class="col-xl-3 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
-                                    <a href="" class="contact-btn">Contact us</a>
+                                    <a href="" class=" contact-btn">Contact us</a>
                                 </div>
                                 <!-- col end -->
                             </div>
@@ -1778,7 +1778,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <a href="" class="join-community-btn wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">Join the community</a>
+                                    <a href="" class="coolBeans join-community-btn wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">Join the community</a>
                                 </div>
                             </div>
                             <!-- col end -->
