Updated footer animation

--- a/index-2.html
+++ b/index-2.html
@@ -1805,7 +1805,7 @@
                                             <p class="para-text">
                                                 Germany — 785 15h Street, Office 478 Berlin, De 81566
                                             </p>
-                                            <a href="" class="email">infoyour@emil.com</a>
+                                            <a href="" class="email">infoyour@email.com</a>
                                         </div>
                                     </div>
                                 </div>
