--- a/index.html
+++ b/index.html
@@ -1602,7 +1602,7 @@
                                             <h3 class="rt-footer-link-heading">Our Community</h3>
                                             <ul class="rt-footer-link-list">
                                                 <li>
-                                                    <a href="#" class="rt-footer-link">
+                                                    <a href="#" class="rt-footer-link link link--io">
                                                         Knowledge base
                                                     </a>
                                                 </li>
