--- a/single-element.html
+++ b/single-element.html
@@ -463,7 +463,7 @@
                                                         </svg>
                                                     </span>
                                                 </a>
-                                                <ul class="list-unstyled dropdown_nav ">
+                                                <ul class="list-unstyled dropdown_nav">
                                                     <li class="nav-item no_icon page-item-2746">
                                                         <a href="#documentation-features" class="nav-link">Documentation Features</a>
                                                     </li>
@@ -1287,7 +1287,29 @@
                             </div>
 
                             <div class="col-xl-3">
-
+                                <div class="single-element-action-area">
+                                    <div class="font-size-controller-btn-area">
+                                        <div class="font-size-controller-btn-wrapper d-flex align-items-center">
+                                            <button class="font-size-minus">A-</button>
+                                            <button class="active font-size-normal">A</button>
+                                            <button class="font-size-minus">A+</button>
+                                        </div>
+                                    </div>
+                                    <ul class="social-share-list social-share-list--style-1 d-flex align-items-center flex-wrap">
+                                        <li>
+                                            <a href="#" class="social-share-link facebook"><i class="fab fa-facebook-f"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="social-share-link twitter"><i class="fab fa-twitter"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="social-share-link instagram"><i class="fab fa-instagram "></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="social-share-link instagram"><i class="fab fa-pinterest-p "></i></a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
